# image-classification

./: .gitignore
backend/: Cargo.toml  build.rs
backend/src/: main.rs
backend/src/model/: mod.rs
