[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version="0.8.3", features = ["multipart"]}
onnxruntime = "0.0.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
ort = "=2.0.0-rc.9"
image = "0.25.6"
ndarray = "0.16.1"
burn = { version = "0.17.0", features = ["wgpu"] }

[build-dependencies]
burn-import = "~0.17"
